# hexlet-django-blog

./: Makefile  db.sqlite3  pyproject.toml
hexlet_django_blog/: __init__.py  settings.py  urls.py  views.py
hexlet_django_blog/article/: models.py  urls.py  views.py
hexlet_django_blog/article/migrations/: 0001_initial.py
hexlet_django_blog/templates/: about.html  base.html  base_about.html  base_index.html
hexlet_django_blog/templates/article/: index.html  one_article.html
