[tool.poetry]
name = "hexlet-django-blog"
version = "0.1.0"
description = "Study project"
authors = ["Safar Galimzianov <safargalimzianov@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
